--- a/skiworld-Client/src/main/resources/fxml/AddDiscount.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddDiscount.fxml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddDiscountController">
+<AnchorPane maxWidth="500.0" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddDiscountController">
    <children>
-      <Label layoutX="42.0" layoutY="98.0" text="Starting Date" />
-      <Label layoutX="42.0" layoutY="168.0" text="Ending Date" />
-      <Label layoutX="42.0" layoutY="233.0" text="Percentage" />
-      <DatePicker fx:id="debut" layoutX="167.0" layoutY="94.0" />
-      <DatePicker fx:id="fin" layoutX="167.0" layoutY="164.0" />
-      <Button fx:id="add" layoutX="417.0" layoutY="331.0" mnemonicParsing="false" onAction="#addDiscount" prefHeight="0.0" prefWidth="52.0" text="Add " />
-      <Button fx:id="bac" layoutX="49.0" layoutY="23.0" mnemonicParsing="false" onAction="#Back" text="Back" />
-      <Label layoutX="291.0" layoutY="27.0" text="Discount Add" textFill="#e81919" />
-      <ChoiceBox fx:id="percentage" layoutX="179.0" layoutY="229.0" prefWidth="150.0" />
+      <Label layoutX="42.0" layoutY="98.0" text="Starting Date :" AnchorPane.leftAnchor="100.0" />
+      <Label layoutX="42.0" layoutY="168.0" text="Ending Date :" AnchorPane.leftAnchor="100.0" />
+      <Label layoutX="42.0" layoutY="233.0" text="Percentage :" AnchorPane.leftAnchor="100.0" />
+      <DatePicker fx:id="debut" layoutX="167.0" layoutY="94.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="100.0" />
+      <DatePicker fx:id="fin" layoutX="167.0" layoutY="164.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="100.0" />
+      <Button fx:id="add" layoutX="257.0" layoutY="329.0" mnemonicParsing="false" onAction="#addDiscount" prefHeight="27.0" prefWidth="112.0" styleClass="btn" text="Add " AnchorPane.leftAnchor="200.0" />
+      <Label layoutX="291.0" layoutY="17.0" prefHeight="27.0" prefWidth="156.0" text="Discount Add" textFill="#e81919" />
+      <ChoiceBox fx:id="percentage" layoutX="169.0" layoutY="229.0" prefHeight="27.0" prefWidth="202.0" styleClass="combo-box" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="100.0" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
