--- a/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
@@ -2,18 +2,25 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrackController">
+<AnchorPane prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrackController">
    <children>
-      <JFXButton layoutX="478.0" layoutY="213.0" onAction="#Add" text="Ok" />
-      <JFXButton layoutX="468.0" layoutY="275.0" onAction="#Cancel" text="Cancel" />
-      <JFXTextField fx:id="diff" layoutX="184.0" layoutY="145.0" />
-      <JFXTextField fx:id="length" layoutX="184.0" layoutY="210.0" />
-      <JFXTextField fx:id="price" layoutX="184.0" layoutY="300.0" />
-      <Label fx:id="difflab" layoutX="65.0" layoutY="160.0" text="Difficulty" />
-      <Label fx:id="lengthlab" layoutX="75.0" layoutY="230.0" text="Length" />
-      <Label fx:id="pricelab" layoutX="75.0" layoutY="316.0" text="Price" />
+      <JFXButton layoutX="468.0" layoutY="152.0" onAction="#Add" prefWidth="100.0" styleClass="btn" text="Add" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="100.0" />
+      <JFXButton layoutX="468.0" layoutY="275.0" onAction="#Cancel" prefWidth="100.0" styleClass="btn" text="Cancel" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="250.0" />
+      <JFXTextField fx:id="diff" layoutX="184.0" layoutY="145.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="100.0" />
+      <JFXTextField fx:id="length" layoutX="184.0" layoutY="210.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="150.0" />
+      <JFXTextField fx:id="price" layoutX="184.0" layoutY="300.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="200.0" />
+      <Label fx:id="difflab" layoutX="65.0" layoutY="160.0" text="Difficulty :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="100.0" />
+      <Label fx:id="lengthlab" layoutX="75.0" layoutY="230.0" text="Length :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="150.0" />
+      <Label fx:id="pricelab" layoutX="75.0" layoutY="316.0" text="Price :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="200.0" />
+      <Text layoutX="204.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Track" AnchorPane.topAnchor="30.0" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
