--- a/skiworld-Client/src/main/resources/fxml/AjoutTraining.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AjoutTraining.fxml
@@ -3,26 +3,33 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTimePicker?>
+<?import java.net.URL?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import com.jfoenix.controls.JFXTimePicker?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrainingController">
+<AnchorPane minHeight="427.0" minWidth="800.0" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrainingController">
    <children>
-      <Label fx:id="Bdlab" layoutX="65.0" layoutY="174.0" text="Begining Date" />
-      <Label fx:id="Edlab" layoutX="75.0" layoutY="246.0" text="End Date" />
-      <Label fx:id="Levellab" layoutX="75.0" layoutY="312.0" text="Level" />
-      <Label fx:id="Numberlab" layoutX="75.0" layoutY="370.0" text="Number" />
-      <Label fx:id="Pricelab" layoutX="75.0" layoutY="423.0" text="Price" />
-      <JFXDatePicker fx:id="BdTF" layoutX="198.0" layoutY="167.0" />
-      <JFXDatePicker fx:id="EdTF" layoutX="198.0" layoutY="239.0" />
-      <JFXTextField fx:id="NumberTF" layoutX="223.0" layoutY="372.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" />
-      <JFXTextField fx:id="PriceTF" layoutX="223.0" layoutY="425.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" />
-      <JFXButton layoutX="519.0" layoutY="270.0" onAction="#Add" text="Add Training" />
-      <JFXButton layoutX="535.0" layoutY="329.0" onAction="#Cancel" text="Cancel" />
-      <ChoiceBox fx:id="LevelTF" layoutX="209.0" layoutY="329.0" prefWidth="150.0" />
-      <JFXTimePicker fx:id="BdTTF" layoutX="400.0" layoutY="167.0"/>
+      <Label fx:id="Bdlab" layoutX="65.0" layoutY="174.0" text="Begining Date :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="150.0" />
+      <Label fx:id="Edlab" layoutX="75.0" layoutY="246.0" text="End Date :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="200.0" />
+      <Label fx:id="Levellab" layoutX="75.0" layoutY="312.0" text="Level :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="250.0" />
+      <Label fx:id="Numberlab" layoutX="75.0" layoutY="370.0" text="Number of Persons :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="300.0" />
+      <Label fx:id="Pricelab" layoutX="75.0" layoutY="423.0" text="Price Per Person :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="350.0" />
+      <JFXDatePicker fx:id="BdTF" layoutX="198.0" layoutY="167.0" promptText="01/01/2017" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="380.0" AnchorPane.topAnchor="150.0" />
+      <JFXDatePicker fx:id="EdTF" layoutX="198.0" layoutY="239.0" promptText="01/01/02017" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="380.0" AnchorPane.topAnchor="200.0" />
+      <JFXTextField fx:id="NumberTF" labelFloat="true" layoutX="223.0" layoutY="372.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" promptText="Number" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="300.0" />
+      <JFXTextField fx:id="PriceTF" labelFloat="true" layoutX="223.0" layoutY="425.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" promptText="Price" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="350.0" />
+      <JFXButton layoutX="520.0" layoutY="287.0" onAction="#Add" styleClass="btn" text="Add Training" AnchorPane.leftAnchor="520.0" AnchorPane.rightAnchor="160.0" />
+      <JFXButton layoutX="537.0" layoutY="354.0" onAction="#Cancel" styleClass="btn" text="Cancel" AnchorPane.leftAnchor="520.0" AnchorPane.rightAnchor="160.0" />
+      <ChoiceBox fx:id="LevelTF" layoutX="209.0" layoutY="329.0" prefWidth="150.0" styleClass="combo-box" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="415.0" AnchorPane.topAnchor="250.0" />
+      <JFXTimePicker fx:id="BdTTF" layoutX="400.0" layoutY="167.0" promptText="00 : 00" AnchorPane.leftAnchor="420.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="150.0" />
+      <Text layoutX="347.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Training" />
       
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
