--- a/skiworld-Client/src/main/resources/fxml/EventsList.fxml
+++ b/skiworld-Client/src/main/resources/fxml/EventsList.fxml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.EventsListController">
+<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.EventsListController">
    <children>
-      <TableView fx:id="tableEvents" layoutX="55.0" layoutY="108.0" prefHeight="400.0" prefWidth="670.0">
+      <TableView fx:id="tableEvents" layoutX="55.0" layoutY="108.0" prefHeight="400.0" prefWidth="670.0" AnchorPane.bottomAnchor="70.0" AnchorPane.topAnchor="110.0">
          <columns>
             <TableColumn fx:id="name" editable="false" prefWidth="117.0" resizable="false" text="Name" />
-            <TableColumn fx:id="place" editable="false" prefWidth="102.0" resizable="false" text="Place" />
-            <TableColumn fx:id="date" editable="false" minWidth="0.0" prefWidth="165.0" resizable="false" text="Date" />
-            <TableColumn fx:id="number" editable="false" prefWidth="110.0" resizable="false" text="Number of places" />
-            <TableColumn fx:id="price" editable="false" prefWidth="39.0" resizable="false" text="Price" />
+            <TableColumn fx:id="place" editable="false" prefWidth="96.0" resizable="false" text="Place" />
+            <TableColumn fx:id="date" editable="false" minWidth="0.0" prefWidth="154.0" resizable="false" text="Date" />
+            <TableColumn fx:id="number" editable="false" prefWidth="112.0" resizable="false" text="Number of places" />
+            <TableColumn fx:id="price" editable="false" prefWidth="54.0" resizable="false" text="Price" />
             <TableColumn fx:id="description" editable="false" prefWidth="136.0" resizable="false" text="Description" />
          </columns>
       </TableView>
-      <Button fx:id="addEvent" layoutX="251.0" layoutY="529.0" mnemonicParsing="false" onAction="#addEvent" prefHeight="25.0" prefWidth="72.0" text="Ajouter" />
-      <Button fx:id="deleteEvent" layoutX="554.0" layoutY="529.0" mnemonicParsing="false" onAction="#deleteEvent" text="Supprimer" />
-      <Separator layoutY="93.0" prefHeight="2.0" prefWidth="801.0" style="-fx-background-color: black;" />
+      <Button fx:id="addEvent" layoutX="768.0" layoutY="146.0" mnemonicParsing="false" onAction="#addEvent" prefHeight="30.0" styleClass="btn" text="Add" AnchorPane.leftAnchor="750.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="145.0" />
+      <Button fx:id="deleteEvent" layoutX="554.0" layoutY="529.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="30.0" styleClass="btn" text="Delete" AnchorPane.leftAnchor="750.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="190.0" />
+      <Separator layoutY="93.0" prefHeight="2.0" prefWidth="801.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Text layoutX="414.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="List Of Events" AnchorPane.topAnchor="20.0" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu.css" />
+      <URL value="@../styles/menu_items.css" />
+   </stylesheets>
 </AnchorPane>
