--- a/skiworld-Client/src/main/resources/fxml/UpdateRoom.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateRoom.fxml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" minHeight="500.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" stylesheets="@../../../../../../../Desktop/Nouveau%20dossier%20(2)/AllWin-2016/src/allwin/pkg2016/GuiForms/MainStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateRoomController">
+<AnchorPane id="AnchorPane" minHeight="500.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateRoomController">
    <children>
-      <Label layoutX="103.0" layoutY="104.0" text="Simple bed" />
-      <Label layoutX="102.0" layoutY="163.0" text="Double bed" />
-      <Label layoutX="102.0" layoutY="296.0" text="Description" />
-      <TextField fx:id="sbedTF" layoutX="237.0" layoutY="96.0" />
-      <TextField fx:id="dbedTF" layoutX="237.0" layoutY="155.0" />
-      <Button layoutX="237.0" layoutY="428.0" mnemonicParsing="false" onAction="#updateRoom" text="Update" />
-      <Label layoutX="103.0" layoutY="229.0" text="Price" />
-      <Button layoutX="389.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
-      <TextField fx:id="priceTF" layoutX="237.0" layoutY="221.0" />
-      <TextArea fx:id="descTA" layoutX="237.0" layoutY="296.0" prefHeight="131.0" prefWidth="221.0" />
+      <Label layoutX="103.0" layoutY="104.0" text="Simple bed :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="100.0" />
+      <Label layoutX="102.0" layoutY="163.0" text="Double bed :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="150.0" />
+      <Label layoutX="102.0" layoutY="296.0" text="Description :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="250.0" />
+      <TextField fx:id="sbedTF" layoutX="237.0" layoutY="96.0" AnchorPane.leftAnchor="180.0" AnchorPane.topAnchor="100.0" />
+      <TextField fx:id="dbedTF" layoutX="237.0" layoutY="155.0" AnchorPane.leftAnchor="180.0" AnchorPane.topAnchor="150.0" />
+      <Button layoutX="237.0" layoutY="428.0" mnemonicParsing="false" onAction="#updateRoom" styleClass="btn" text="Update" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="180.0" />
+      <Label layoutX="103.0" layoutY="229.0" text="Price :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="200.0" />
+      <Button layoutX="389.0" layoutY="428.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="btn" text="Cancel" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="150.0" />
+      <TextField fx:id="priceTF" layoutX="237.0" layoutY="221.0" AnchorPane.leftAnchor="180.0" AnchorPane.topAnchor="200.0" />
+      <TextArea fx:id="descTA" layoutX="237.0" layoutY="296.0" prefHeight="131.0" prefWidth="221.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="250.0" />
+      <Text layoutX="263.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Room" AnchorPane.topAnchor="20.0" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
