--- a/skiworld-Client/src/main/resources/fxml/UpdateShop.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateShop.fxml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60" fx:controller="esprit.skiworld.skiworld_Client.UpdateShopController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateShopController">
    <children>
-      <Label layoutX="264.0" layoutY="14.0" prefHeight="60.0" prefWidth="146.0" text="Update Equipement" textFill="#da1111" />
-      <Label layoutX="18.0" layoutY="97.0" text="Name" />
-      <Label layoutX="18.0" layoutY="133.0" text="Category" />
-      <Label layoutX="21.0" layoutY="174.0" text="Type" />
-      <Label layoutX="21.0" layoutY="207.0" text="Price" />
-      <Label layoutX="18.0" layoutY="242.0" text="Shop  quantity" />
-      <Label layoutX="18.0" layoutY="276.0" text="Inventory quantity" />
-      <TextField fx:id="name" layoutX="175.0" layoutY="93.0" />
-      <TextField fx:id="category" layoutX="175.0" layoutY="129.0" />
-      <TextField fx:id="type" layoutX="175.0" layoutY="170.0" />
-      <TextField fx:id="price" layoutX="175.0" layoutY="203.0" />
-      <TextField fx:id="sq" layoutX="175.0" layoutY="238.0" />
-      <TextField fx:id="iq" layoutX="175.0" layoutY="272.0" />
-      <Button fx:id="up" layoutX="410.0" layoutY="340.0" mnemonicParsing="false" onAction="#modifier" text="Update" />
-      <Button fx:id="bac" layoutX="41.0" layoutY="32.0" mnemonicParsing="false" onAction="#back" text="Back" />
+      <Label layoutX="18.0" layoutY="97.0" text="Name :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="60.0" />
+      <Label layoutX="18.0" layoutY="133.0" text="Category :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="110.0" />
+      <Label layoutX="21.0" layoutY="174.0" text="Type :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="160.0" />
+      <Label layoutX="21.0" layoutY="207.0" text="Price :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="210.0" />
+      <Label layoutX="18.0" layoutY="242.0" text="Shop  quantity :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="260.0" />
+      <Label layoutX="18.0" layoutY="276.0" text="Inventory quantity :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="310.0" />
+      <TextField fx:id="name" layoutX="175.0" layoutY="93.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="60.0" />
+      <TextField fx:id="category" layoutX="175.0" layoutY="129.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="110.0" />
+      <TextField fx:id="type" layoutX="175.0" layoutY="170.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="160.0" />
+      <TextField fx:id="price" layoutX="175.0" layoutY="203.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="210.0" />
+      <TextField fx:id="sq" layoutX="175.0" layoutY="238.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="260.0" />
+      <TextField fx:id="iq" layoutX="175.0" layoutY="272.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="310.0" />
+      <Button fx:id="up" layoutX="334.0" layoutY="354.0" mnemonicParsing="false" onAction="#modifier" styleClass="btn" text="Update" AnchorPane.rightAnchor="200.0" />
+      <Text layoutX="235.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Equipment" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu.css" />
+      <URL value="@../styles/menu_items.css" />
+   </stylesheets>
 </AnchorPane>
