--- a/skiworld-Client/src/main/resources/fxml/UpdateTransport.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateTransport.fxml
@@ -4,70 +4,75 @@
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTimePicker?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane minHeight="500.0" minWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60" fx:controller="esprit.skiworld.skiworld_Client.UpdateTransportController">
+<AnchorPane minHeight="500.0" minWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateTransportController">
    <children>
-      <Separator layoutY="376.0" prefHeight="11.0" prefWidth="904.0" />
-      <Label layoutX="60.0" layoutY="140.0" prefHeight="27.0" prefWidth="108.0" text="Departure Place ">
+      <Separator layoutY="376.0" prefHeight="11.0" prefWidth="904.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <Label layoutX="60.0" layoutY="140.0" prefHeight="27.0" text="Departure Place  :" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="110.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="60.0" layoutY="170.0" prefHeight="27.0" prefWidth="108.0" text="Departure Date">
+      <Label layoutX="60.0" layoutY="170.0" prefHeight="27.0" text="Departure Date :" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="160.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="60.0" layoutY="200.0" prefHeight="27.0" prefWidth="108.0" text="Departure Time">
+      <Label layoutX="60.0" layoutY="200.0" prefHeight="27.0" text="Departure Time :" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="210.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="500.0" layoutY="140.0" prefHeight="27.0" prefWidth="108.0" text="Arrival Place ">
+      <Label layoutX="500.0" layoutY="140.0" prefHeight="27.0" text="Arrival Place  :" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="110.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="500.0" layoutY="170.0" prefHeight="27.0" prefWidth="108.0" text="Arrival Date ">
+      <Label layoutX="500.0" layoutY="170.0" prefHeight="27.0" text="Arrival Date :" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="160.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="500.0" layoutY="200.0" prefHeight="27.0" prefWidth="108.0" text="Arrival Time">
+      <Label layoutX="500.0" layoutY="200.0" prefHeight="27.0" text="Arrival Time :" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="210.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="60.0" layoutY="230.0" prefHeight="27.0" prefWidth="108.0" text="Number Of Places">
+      <Label layoutX="60.0" layoutY="230.0" prefHeight="27.0" text="Number Of Places :" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="260.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="500.0" layoutY="230.0" prefHeight="27.0" prefWidth="108.0" text="Cost PER Person">
+      <Label layoutX="500.0" layoutY="230.0" prefHeight="27.0" text="Cost PER Person :" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="260.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Label layoutX="450.0" layoutY="300.0" prefHeight="27.0" prefWidth="108.0" text="Type">
+      <Label layoutX="509.0" layoutY="330.0" prefHeight="27.0" text="Type :" AnchorPane.leftAnchor="500.0" AnchorPane.topAnchor="310.0">
          <padding>
             <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </Label>
-      <Separator layoutX="10.0" layoutY="80.0" prefHeight="11.0" prefWidth="904.0" />
-      <JFXTextField fx:id="depP" layoutX="180.0" layoutY="140.0" />
-      <JFXTextField fx:id="nPlaces" layoutX="180.0" layoutY="230.0" />
-      <JFXTextField fx:id="cost" layoutX="630.0" layoutY="230.0" />
-      <JFXTextField fx:id="type" layoutX="519.0" layoutY="301.0" />
-      <JFXDatePicker fx:id="depDate" layoutX="180.0" layoutY="170.0" />
-      <JFXDatePicker fx:id="arrDate" layoutX="630.0" layoutY="170.0" />
-      <JFXTimePicker fx:id="depTime" layoutX="180.0" layoutY="200.0" />
-      <JFXTimePicker fx:id="arrTime" layoutX="630.0" layoutY="200.0" />
-      <JFXTextField fx:id="arrPlace" layoutX="630.0" layoutY="140.0" />
-      <JFXButton fx:id="updateButton" layoutX="433.0" layoutY="382.0" onAction="#updateAction" text="Update" />
+      <Separator layoutX="10.0" layoutY="80.0" prefHeight="11.0" prefWidth="904.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <JFXTextField fx:id="depP" layoutX="180.0" layoutY="140.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="580.0" AnchorPane.topAnchor="110.0" />
+      <JFXTextField fx:id="nPlaces" layoutX="180.0" layoutY="230.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="580.0" AnchorPane.topAnchor="260.0" />
+      <JFXTextField fx:id="cost" layoutX="630.0" layoutY="230.0" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="260.0" />
+      <JFXDatePicker fx:id="depDate" layoutX="180.0" layoutY="170.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="580.0" AnchorPane.topAnchor="160.0" />
+      <JFXDatePicker fx:id="arrDate" layoutX="630.0" layoutY="170.0" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="160.0" />
+      <JFXTimePicker fx:id="depTime" layoutX="180.0" layoutY="200.0" AnchorPane.leftAnchor="180.0" AnchorPane.rightAnchor="580.0" AnchorPane.topAnchor="210.0" />
+      <JFXTimePicker fx:id="arrTime" layoutX="630.0" layoutY="200.0" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="210.0" />
+      <JFXTextField fx:id="arrPlace" layoutX="630.0" layoutY="140.0" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="110.0" />
+      <JFXButton fx:id="updateButton" layoutX="436.0" layoutY="404.0" onAction="#updateAction" styleClass="btn" text="Update" />
+      <ChoiceBox layoutX="630.0" layoutY="311.0" prefWidth="150.0" styleClass="combo-box" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
